# anguish-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conandata.yml  conanfile.txt
assets/sprites/: character.cpp  character.h  grass.cpp  grass.h
core/: CMakeLists.txt  game.cpp  game.h  main.cpp
core/idle/: idle_manager.cpp  idle_manager.h
core/objects/: collision_object.cpp  collision_object.h  item.h  object.cpp  object.h  sprite_object.cpp  sprite_object.h  static_object.h
core/ogl/: ebo.h  gl_error.h  gl_object.h  vao.cpp  vao.h  vbo.cpp  vbo.h  vertices.h
core/physics/: aabb.h  physics_manager.cpp  physics_manager.h
core/renderer/: rendering_manager.cpp  rendering_manager.h
core/scenes/: scene.cpp  scene.h
core/shaders/: frag.glsl  shader.cpp  shader.h  shader_program.cpp  shader_program.h  vert.glsl
core/texture/: texture.cpp  texture.h
core/utilities/: camera.cpp  camera.h  data_structures.cpp  data_structures.h  file_io.h  keyboard.h  signal.h  window.cpp  window.h
dependencies/: glad.c
dependencies/include/glad/: glad.h
example/: CMakeLists.txt  game.cpp  game.h  main.cpp
example/grass_scene/: grass_scene.cpp  grass_scene.h
example/grass_scene/sprites/: character.cpp  character.h  grass.cpp
scenes/grass_scene/sprites/: character.cpp  grass.cpp
source/: main.cpp
source/idle/: idle_manager.cpp  idle_manager.h
source/objects/: collision_object.cpp  collision_object.h  object.h  sprite_object.cpp  sprite_object.h  static_object.cpp  static_object.h
source/ogl/: ebo.cpp  gl_object.h  object.cpp  object.h  object_2d.cpp  object_2d.h  vao.cpp  vao.h  vbo.cpp  vbo.h  vertices.h
source/physics/: aabb.cpp  physics_manager.cpp  physics_manager.h  physics_object.cpp  physics_object.h
source/renderer/: rendering_manager.cpp  rendering_manager.h
source/shaders/: frag.glsl  shader.cpp  shader.h  shader_program.cpp  shader_program.h  vert.glsl
source/texture/: sprite.cpp  sprite.h  texture.cpp  texture.h
source/utilities/: data_structures.cpp  data_structures.h  gl_error.h  keyboard.cpp  keyboard.h  window.cpp  window.h
